logs/dag_id=dag_with_postgres_operator_v02/run_id=manual__2022-11-30T01:43:19.795233+00:00/task_id=insert_into_table/attempt=1.log
[2022-11-30T01:43:22.739+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v02.insert_into_table manual__2022-11-30T01:43:19.795233+00:00 [queued]>
[2022-11-30T01:43:22.752+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_operator_v02.insert_into_table manual__2022-11-30T01:43:19.795233+00:00 [queued]>
[2022-11-30T01:43:22.753+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T01:43:22.753+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 6
[2022-11-30T01:43:22.753+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-30T01:43:22.783+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2022-11-30 01:43:19.795233+00:00
[2022-11-30T01:43:22.788+0000] {standard_task_runner.py:55} INFO - Started process 1561 to run task
[2022-11-30T01:43:22.791+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'insert_into_table', 'manual__2022-11-30T01:43:19.795233+00:00', '--job-id', '156', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmpde9lwuu1']
[2022-11-30T01:43:22.792+0000] {standard_task_runner.py:83} INFO - Job 156: Subtask insert_into_table
[2022-11-30T01:43:22.896+0000] {task_command.py:376} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.insert_into_table manual__2022-11-30T01:43:19.795233+00:00 [running]> on host 2c9b3e546def
[2022-11-30T01:43:23.012+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Bruno Lima
AIRFLOW_CTX_DAG_ID=dag_with_postgres_operator_v02
AIRFLOW_CTX_TASK_ID=insert_into_table
AIRFLOW_CTX_EXECUTION_DATE=2022-11-30T01:43:19.795233+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-30T01:43:19.795233+00:00
[2022-11-30T01:43:23.023+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-11-30T01:43:23.029+0000] {sql.py:315} INFO - Running statement: 
            insert into dag_runs (dt,   ) values ('2022-11-30', 'dag_with_postgres_operator_v02')
        , parameters: None
[2022-11-30T01:43:23.029+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 2:             insert into dag_runs (dt,   ) values ('2022-11-3...
                                                ^

[2022-11-30T01:43:23.046+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=insert_into_table, execution_date=20221130T014319, start_date=20221130T014322, end_date=20221130T014323
[2022-11-30T01:43:23.061+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 156 for task insert_into_table (syntax error at or near ")"
LINE 2:             insert into dag_runs (dt,   ) values ('2022-11-3...
                                                ^
; 1561)
[2022-11-30T01:43:23.092+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-11-30T01:43:23.118+0000] {taskinstance.py:2623} INFO - 0 downstream tasks scheduled from follow-on schedule check
